[gd_scene load_steps=7 format=3 uid="uid://c30lgrwhhhprt"]

[ext_resource type="Script" path="res://scene/dialogue_box.gd" id="1_o0lfn"]
[ext_resource type="Texture2D" uid="uid://dgktvongngyvx" path="res://sprite/dialogue/dialogue_box2.png" id="2_67muw"]
[ext_resource type="Texture2D" uid="uid://ewfc7o7ucj8k" path="res://sprite/player/Sprite-protagbird.png" id="3_b83ob"]
[ext_resource type="AudioStream" uid="uid://cqslg73f1i3lk" path="res://audio/tone beep.wav" id="4_n8i5s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_myk1d"]
atlas = ExtResource("3_b83ob")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_nmdpa"]
subpixel_positioning = 0

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_o0lfn")

[node name="DialogueBackground" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1280.0
texture = ExtResource("2_67muw")

[node name="DialogueText" type="RichTextLabel" parent="."]
offset_left = 192.0
offset_top = 960.0
offset_right = 1408.0
offset_bottom = 1152.0
theme_override_font_sizes/italics_font_size = 36
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Placeholder Text"

[node name="CharPicture" type="TextureRect" parent="."]
offset_left = 1472.0
offset_top = 960.0
offset_right = 1664.0
offset_bottom = 1152.0
texture = SubResource("AtlasTexture_myk1d")

[node name="CharName" type="Label" parent="."]
offset_left = 256.0
offset_top = 776.0
offset_right = 544.0
offset_bottom = 856.0
theme_override_fonts/font = SubResource("SystemFont_nmdpa")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n8i5s")
